hphp/hack/test/typecheck/nameof/simple.php
<?hh

class C {}

function f(): string {
  return nameof C;
}
